--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>Ahmed Eissa</h4>
-                    <h1>Ui &<br /> Ux Designer</h1> </div>
+                    <h4>Phoebe Taylor</h4>
+                    <h1>Fantastic<br /> Wonderful</h1> </div>
             </div>
         </div>
     </div>
